overflow fix
jquery is a pain to edit

--- a/Project/GUI/style.css
+++ b/Project/GUI/style.css
@@ -62,3 +62,7 @@ body {
 #addExistingTemplate {
 	display: inline-block;
 }
+#menu
+{
+	overflow-x: hidden;
+}
